--- a/index.html
+++ b/index.html
@@ -4,13 +4,56 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css">
-    <script type="module" src="src/main.js">
-
-    </script>
     <title>Vite App</title>
+    <link rel="stylesheet" href="src/style.css">
+    <script type="module" src="src/main.js"></script>
   </head>
   <body>
-    <h1>Hello Vite</h1>
+    <header>
+      <h1>Hello</h1>
+    </header>
+    <main>
+      <div class="container">
+        <div class="card">
+          <img src="images/1.jpg" alt="">
+        </div>
+        <div class="card">
+          <img src="images/2.jpg" alt="">
+        </div>
+        <div class="card">
+          <img src="images/3.jpg" alt="">
+        </div>
+        <div class="card">
+          <img src="images/4.jpg" alt="">
+        </div>
+        <div class="card">
+          <img src="images/5.jpg" alt="">
+        </div>
+        <div class="card">
+          <img src="images/6.jpg" alt="">
+        </div>
+        <div class="card">
+          <img src="images/1.jpg" alt="">
+        </div>
+        <div class="card">
+          <img src="images/2.jpg" alt="">
+        </div>
+        <div class="card">
+          <img src="images/3.jpg" alt="">
+        </div>
+        <div class="card">
+          <img src="images/4.jpg" alt="">
+        </div>
+        <div class="card">
+          <img src="images/5.jpg" alt="">
+        </div>
+        <div class="card">
+          <img src="images/6.jpg" alt="">
+        </div>
+      </div>
+    </main>
+    <footer>
+      <p>&copy; YaKto</p>
+    </footer>
   </body>
 </html>
